프론트 페이지 코드 오류 수정 및 pom.xml 수정

--- a/lost-and-found/src/main/resources/templates/new-item.html
+++ b/lost-and-found/src/main/resources/templates/new-item.html
@@ -23,12 +23,15 @@
     <label for="category" class="form-label">Category</label>
     <select id="category" name="category" class="form-select">
       <option selected>Open this select menu</option>
-      <option value="COFFEE_BEAN_PACKAGE">COFFEE BEAN PACKAGE</option>
+      <option value="ELECTRONICS">전자기기</option>
+      <option value="WALLET">지갑</option>
+      <option value="CLOTHES">의류</option>
+      <option value="UMBRELLA">우산</option>
     </select>
   </div>
   <div class="mb-3">
     <label for="place" class="form-label">Place</label>
-    <input type="number" class="form-control" id="place" name="place">
+    <input type="text" class="form-control" id="place" name="place">
   </div>
   <div class="mb-3">
     <label for="description" class="form-label">Description</label>
