--- a/lost-and-found/src/main/resources/templates/item-detail.html
+++ b/lost-and-found/src/main/resources/templates/item-detail.html
@@ -37,7 +37,7 @@
     <label for="description" class="form-label">Description</label>
     <textarea class="form-control" id="description" name="description" rows="3"></textarea>
   </div>
-  <button type="submit" class="btn btn-primary">Submit</button>
+  <button type="submit" class="btn btn-primary">수정</button>
 </form>
 </body>
 </html>
