--- a/lost-and-found/src/main/resources/templates/new-item.html
+++ b/lost-and-found/src/main/resources/templates/new-item.html
@@ -9,11 +9,10 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 
-  <title>Grids & Circles</title>
+  <title>분실물 등록</title>
 </head>
 <body class="container-fluid">
-<h1>Grids & Circles</h1>
-<h2>Production Management</h2>
+<h1>분실물 등록 페이지</h1>
 
 <form th:action="@{/items}" method="post">
   <div class="mb-3">
